mise en place du refresh token et CRUD de categorie d'éveènement
