# restapi/api/controllers/AuthController.js
@@ -114,6 +114,9 @@ module.exports = {
    *                 token:
    *                   type: string
    *                   example: "eyJhbGciOiJIUzI1..."
+   *                 refreshToken:
+   *                   type: string
+   *                   example: "eyJhbGciOiJIUzI..."
    *       400:
    *         description: Email et mot de passe requis
    *       401:
@@ -128,26 +131,88 @@ module.exports = {
     try {
       const { email, password } = req.body;
       if (!email || !password) {
-        //return res.badRequest({ message: "Email et mot de passe requis." });
-        return res.status(400).json({ message: 'Email et mot de passe requis.' });
+        return res.status(400).json({ message: "Email et mot de passe requis." });
       }
+
       const user = await User.findOne({ email });
-      if (!user) return res.status(404).json({ message: 'Utilisateur non trouvé.' }); 
+      if (!user) return res.status(404).json({ message: "Utilisateur non trouvé." });
 
       const isValidPassword = await bcrypt.compare(password, user.password);
-      if (!isValidPassword) return res.status(401).json({ message: 'Mot de passe incorrect' });
+      if (!isValidPassword) return res.status(401).json({ message: "Mot de passe incorrect" });
 
-      // Génération du token JWT
-      const token = jwt.sign({ id: user.id, email: user.email }, "secretkey", { expiresIn: "1h" });
+      // Génération des tokens
+      const accessToken = jwt.sign({ id: user.id, email: user.email }, "secretkey", { expiresIn: "1h" });
+      const refreshToken = jwt.sign({ id: user.id, email: user.email }, "refresh_secret", { expiresIn: "7d" });
 
-      return res.json({ message: "Connexion réussie.", token });
+      return res.json({ message: "Connexion réussie.", token: accessToken, refreshToken });
     } catch (error) {
-      return res.serverError(error);
+      return res.status(500).json(error);
     }
   },
 
   //refresh token
 
-  
+  /**
+   * @swagger
+   * /api/auth/refresh-token:
+   *   post:
+   *     summary: Rafraîchir le token JWT
+   *     description: Génère un nouveau token d'accès à partir du refresh token.
+   *     tags: 
+   *       - Authentification
+   *     requestBody:
+   *       required: true
+   *       content:
+   *         application/json:
+   *           schema:
+   *             type: object
+   *             properties:
+   *               refreshToken:
+   *                 type: string
+   *                 example: "eyJhbGciOiJIUzI..."
+   *     responses:
+   *       200:
+   *         description: Nouveau token généré
+   *         content:
+   *           application/json:
+   *             schema:
+   *               type: object
+   *               properties:
+   *                 token:
+   *                   type: string
+   *                   example: "eyJhbGciOiJIUzI..."
+   *                 refreshToken:
+   *                   type: string
+   *                   example: "eyJhbGciOiJIUzI..."
+   *       400:
+   *         description: Refresh token manquant
+   *       401:
+   *         description: Refresh token invalide ou expiré
+   */
+
+  refreshToken: async function (req, res) {
+
+    try {
+      const { refreshToken } = req.body;
+      if (!refreshToken){
+        return res.status(401).json({ message: 'Refresh token requis.' });
+      } 
+
+      jwt.verify(refreshToken, "refresh_secret", (err, decoded) => {
+        if (err){
+          return res.status(401).json({ message: 'Refresh token invalide ou expiré.' });
+        } 
+
+        // Génération d'un nouveau token
+        const accessToken = jwt.sign({ id: decoded.id, email: decoded.email }, "secretkey", { expiresIn: "15m" });
+        const newRefreshToken = jwt.sign({ id: decoded.id, email: decoded.email }, "refresh_secret", { expiresIn: "7d" });
+
+        return res.json({ token:accessToken, refreshToken: newRefreshToken });
+      });
+    } catch (error) {
+      return res.status(500).json(error);
+    }
+  }
+
 
 };
