# restapi/config/routes.js
@@ -13,10 +13,37 @@ const swaggerSpec = require("./swagger");
 
 module.exports.routes = {
 
+    /**
+     * Route correspondant à swagger pour la documentation de l'API
+     */
+    "GET /swagger": swaggerUi.setup(swaggerSpec),
+
+
+    /**
+     * Route Authentification
+     */
     'GET /api/': { controller: 'HomeController',action: 'index' },
     'POST /api/auth/signup': {controller:'AuthController', action:'signup'},
 
     'POST /api/auth/login': {controller:'AuthController', action:'login'},
+    'POST /api/auth/refresh-token': {controller:'AuthController', action:'refreshToken'},
 
-    "GET /swagger": swaggerUi.setup(swaggerSpec),
+    /**
+     * Route Categorie d'évènement
+     */
+
+    'POST /api/categorie/save': {controller:'CategorieController', action:'create'},
+    'GET /api/categorie': {controller:'CategorieController', action:'find'},
+    'GET /api/categorie/:id': {controller:'CategorieController', action:'findOne'},
+    'PUT /api/categorie/update/:id': {controller:'CategorieController', action:'update'},
+    'DELETE /api/categorie/:id': {controller:'CategorieController', action:'delete'},
+
+
+    /**
+     * Route Evènement
+     */
+
+
+
+
 };
